# dsba-itop2021-hw1

./: CMakeLists.txt
data/: videos_10rows.csv  videos_239rows.csv
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  dialogadd.cpp  dialogadd.h  dialogadd.ui  getinfo.cpp  getinfo.h  getinfo.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderarea.cpp  tablemodel.cpp  tablemodel.h
